feat(Validação do DTO com class-validator)
