# src/interface/request/userRequestInterface.ts
@@ -1,3 +1,0 @@
-export interface Signup {
-  username: string;
-}
